employees table was improved

--- a/app/static/employers-page.html
+++ b/app/static/employers-page.html
@@ -680,9 +680,38 @@
                             <button class="button button--no-events button--border-surfie-green" type="button">Full time
                             </button>
                           </td>
-                          <td></td>
                           <td>
-                            <p>--</p>
+                          </td>
+                          <td>
+                            <div class="row-group row-group--sm row-group--nowrap row-group--align-center">
+                              <div class="row-group__item">
+                                <div class="tooltip">
+                                  <div class="tooltip__text">
+                                    <p>Creative editing</p>
+                                  </div>
+                                  <p>EN-LT, LT, RU,</p>
+                                </div>
+                              </div>
+                              <div class="row-group__item">
+                                <div class="dropdown lang-combinations-dropdown js-dropdown" data-dropdown="notifications">
+                                  <div class="dropdown__toggle lang-combinations-dropdown__toggle" data-dropdown-toggle="notifications">
+                                    <svg class="svg-icon svg-icon--surfie-green lang-combinations-dropdown__toggle-icon" width="8" height="6">
+                                      <use href="images/svg/svg-sprite/symbol/sprite.svg#chevron-down" x="0" y="0"></use>
+                                    </svg>
+                                  </div>
+                                  <div class="dropdown__body lang-combinations-dropdown__body">
+                                    <div class="column-group column-group--xs">
+                                      <div class="column-group__item">
+                                        <p class="font-semibold">All combinations:</p>
+                                      </div>
+                                      <div class="column-group__item">
+                                        <p>EN-LT, LT, RU, EN-LT, LT, RU, EN-LT, LT, RU, EN-LT, LT, RU</p>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
                           </td>
                           <td>
                             <p class="font-semibold text-whating-yellow">Wating for approval</p>
@@ -743,16 +772,8 @@
                             </div>
                           </td>
                           <td>
-                            <button class="button button--no-events button--border-surfie-green" type="button">Full time
-                            </button>
                           </td>
                           <td>
-                            <div class="row-group row-group--sm row-group--nowrap row-group--align-center">
-                              <div class="row-group__item"><img src="images/icons/proofreading.svg" alt="proofreading"></div>
-                              <div class="row-group__item"><img src="images/icons/translation.svg" alt="translation"></div>
-                              <div class="row-group__item"><img src="images/icons/interpreting.svg" alt="interpreting"></div>
-                              <div class="row-group__item"><img src="images/icons/creative-editing.svg" alt="creative-editing"></div>
-                            </div>
                           </td>
                           <td>
                             <div class="row-group row-group--sm row-group--nowrap row-group--align-center">
@@ -1135,9 +1156,38 @@
                             <button class="button button--no-events button--border-surfie-green" type="button">Full time
                             </button>
                           </td>
-                          <td></td>
                           <td>
-                            <p>--</p>
+                          </td>
+                          <td>
+                            <div class="row-group row-group--sm row-group--nowrap row-group--align-center">
+                              <div class="row-group__item">
+                                <div class="tooltip">
+                                  <div class="tooltip__text">
+                                    <p>Creative editing</p>
+                                  </div>
+                                  <p>EN-LT, LT, RU,</p>
+                                </div>
+                              </div>
+                              <div class="row-group__item">
+                                <div class="dropdown lang-combinations-dropdown js-dropdown" data-dropdown="notifications">
+                                  <div class="dropdown__toggle lang-combinations-dropdown__toggle" data-dropdown-toggle="notifications">
+                                    <svg class="svg-icon svg-icon--surfie-green lang-combinations-dropdown__toggle-icon" width="8" height="6">
+                                      <use href="images/svg/svg-sprite/symbol/sprite.svg#chevron-down" x="0" y="0"></use>
+                                    </svg>
+                                  </div>
+                                  <div class="dropdown__body lang-combinations-dropdown__body">
+                                    <div class="column-group column-group--xs">
+                                      <div class="column-group__item">
+                                        <p class="font-semibold">All combinations:</p>
+                                      </div>
+                                      <div class="column-group__item">
+                                        <p>EN-LT, LT, RU, EN-LT, LT, RU, EN-LT, LT, RU, EN-LT, LT, RU</p>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
                           </td>
                           <td>
                             <p class="font-semibold text-whating-yellow">Wating for approval</p>
@@ -1198,16 +1248,8 @@
                             </div>
                           </td>
                           <td>
-                            <button class="button button--no-events button--border-surfie-green" type="button">Full time
-                            </button>
                           </td>
                           <td>
-                            <div class="row-group row-group--sm row-group--nowrap row-group--align-center">
-                              <div class="row-group__item"><img src="images/icons/proofreading.svg" alt="proofreading"></div>
-                              <div class="row-group__item"><img src="images/icons/translation.svg" alt="translation"></div>
-                              <div class="row-group__item"><img src="images/icons/interpreting.svg" alt="interpreting"></div>
-                              <div class="row-group__item"><img src="images/icons/creative-editing.svg" alt="creative-editing"></div>
-                            </div>
                           </td>
                           <td>
                             <div class="row-group row-group--sm row-group--nowrap row-group--align-center">
@@ -1590,9 +1632,38 @@
                             <button class="button button--no-events button--border-surfie-green" type="button">Full time
                             </button>
                           </td>
-                          <td></td>
                           <td>
-                            <p>--</p>
+                          </td>
+                          <td>
+                            <div class="row-group row-group--sm row-group--nowrap row-group--align-center">
+                              <div class="row-group__item">
+                                <div class="tooltip">
+                                  <div class="tooltip__text">
+                                    <p>Creative editing</p>
+                                  </div>
+                                  <p>EN-LT, LT, RU,</p>
+                                </div>
+                              </div>
+                              <div class="row-group__item">
+                                <div class="dropdown lang-combinations-dropdown js-dropdown" data-dropdown="notifications">
+                                  <div class="dropdown__toggle lang-combinations-dropdown__toggle" data-dropdown-toggle="notifications">
+                                    <svg class="svg-icon svg-icon--surfie-green lang-combinations-dropdown__toggle-icon" width="8" height="6">
+                                      <use href="images/svg/svg-sprite/symbol/sprite.svg#chevron-down" x="0" y="0"></use>
+                                    </svg>
+                                  </div>
+                                  <div class="dropdown__body lang-combinations-dropdown__body">
+                                    <div class="column-group column-group--xs">
+                                      <div class="column-group__item">
+                                        <p class="font-semibold">All combinations:</p>
+                                      </div>
+                                      <div class="column-group__item">
+                                        <p>EN-LT, LT, RU, EN-LT, LT, RU, EN-LT, LT, RU, EN-LT, LT, RU</p>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
                           </td>
                           <td>
                             <p class="font-semibold text-whating-yellow">Wating for approval</p>
@@ -1653,16 +1724,8 @@
                             </div>
                           </td>
                           <td>
-                            <button class="button button--no-events button--border-surfie-green" type="button">Full time
-                            </button>
                           </td>
                           <td>
-                            <div class="row-group row-group--sm row-group--nowrap row-group--align-center">
-                              <div class="row-group__item"><img src="images/icons/proofreading.svg" alt="proofreading"></div>
-                              <div class="row-group__item"><img src="images/icons/translation.svg" alt="translation"></div>
-                              <div class="row-group__item"><img src="images/icons/interpreting.svg" alt="interpreting"></div>
-                              <div class="row-group__item"><img src="images/icons/creative-editing.svg" alt="creative-editing"></div>
-                            </div>
                           </td>
                           <td>
                             <div class="row-group row-group--sm row-group--nowrap row-group--align-center">
