employee-settings general and education were added

--- a/app/static/employers-page.html
+++ b/app/static/employers-page.html
@@ -464,8 +464,7 @@
                           <td>
                             <p>12879452</p>
                           </td>
-                          <td>
-                            <div class="row-group row-group--sm row-group--nowrap row-group--align-center">
+                          <td><a class="row-group row-group--sm row-group--align-center row-group--nowrap" href="employee-settings.html">
                               <div class="row-group__item">
                                 <div class="avatar">
                                   <figure style="background-image:url('images/user/avatar.jpg')"></figure>
@@ -474,8 +473,7 @@
                               <div class="row-group__item">
                                 <p class="font-bold">Lukas Baranauskas</p>
                               </div>
-                            </div>
-                          </td>
+                            </a></td>
                           <td>
                             <button class="button button--no-events button--border-caribbean-green" type="button">Freelance
                             </button>
@@ -563,8 +561,7 @@
                           <td>
                             <p>12879452</p>
                           </td>
-                          <td>
-                            <div class="row-group row-group--sm row-group--nowrap row-group--align-center">
+                          <td><a class="row-group row-group--sm row-group--align-center row-group--nowrap" href="employee-settings.html">
                               <div class="row-group__item">
                                 <div class="avatar">
                                   <figure style="background-image:url('images/user/avatar.jpg')"></figure>
@@ -573,8 +570,7 @@
                               <div class="row-group__item">
                                 <p class="font-bold">Marija Juodijenė</p>
                               </div>
-                            </div>
-                          </td>
+                            </a></td>
                           <td>
                             <button class="button button--no-events button--border-surfie-green" type="button">Full time
                             </button>
@@ -664,8 +660,7 @@
                           <td>
                             <p>12879452</p>
                           </td>
-                          <td>
-                            <div class="row-group row-group--sm row-group--nowrap row-group--align-center">
+                          <td><a class="row-group row-group--sm row-group--align-center row-group--nowrap" href="employee-settings.html">
                               <div class="row-group__item">
                                 <div class="avatar">
                                   <figure style="background-image:url('images/user/avatar.jpg')"></figure>
@@ -674,8 +669,7 @@
                               <div class="row-group__item">
                                 <p class="font-bold">Marija Juodijenė</p>
                               </div>
-                            </div>
-                          </td>
+                            </a></td>
                           <td>
                             <button class="button button--no-events button--border-surfie-green" type="button">Full time
                             </button>
@@ -759,8 +753,7 @@
                           <td>
                             <p>12879452</p>
                           </td>
-                          <td>
-                            <div class="row-group row-group--sm row-group--nowrap row-group--align-center">
+                          <td><a class="row-group row-group--sm row-group--align-center row-group--nowrap" href="employee-settings.html">
                               <div class="row-group__item">
                                 <div class="avatar">
                                   <figure style="background-image:url('images/user/avatar.jpg')"></figure>
@@ -769,8 +762,7 @@
                               <div class="row-group__item">
                                 <p class="font-bold">Marija Juodijenė</p>
                               </div>
-                            </div>
-                          </td>
+                            </a></td>
                           <td>
                           </td>
                           <td>
@@ -940,8 +932,7 @@
                           <td>
                             <p>12879452</p>
                           </td>
-                          <td>
-                            <div class="row-group row-group--sm row-group--nowrap row-group--align-center">
+                          <td><a class="row-group row-group--sm row-group--align-center row-group--nowrap" href="employee-settings.html">
                               <div class="row-group__item">
                                 <div class="avatar">
                                   <figure style="background-image:url('images/user/avatar.jpg')"></figure>
@@ -950,8 +941,7 @@
                               <div class="row-group__item">
                                 <p class="font-bold">Lukas Baranauskas</p>
                               </div>
-                            </div>
-                          </td>
+                            </a></td>
                           <td>
                             <button class="button button--no-events button--border-caribbean-green" type="button">Freelance
                             </button>
@@ -1039,8 +1029,7 @@
                           <td>
                             <p>12879452</p>
                           </td>
-                          <td>
-                            <div class="row-group row-group--sm row-group--nowrap row-group--align-center">
+                          <td><a class="row-group row-group--sm row-group--align-center row-group--nowrap" href="employee-settings.html">
                               <div class="row-group__item">
                                 <div class="avatar">
                                   <figure style="background-image:url('images/user/avatar.jpg')"></figure>
@@ -1049,8 +1038,7 @@
                               <div class="row-group__item">
                                 <p class="font-bold">Marija Juodijenė</p>
                               </div>
-                            </div>
-                          </td>
+                            </a></td>
                           <td>
                             <button class="button button--no-events button--border-surfie-green" type="button">Full time
                             </button>
@@ -1140,8 +1128,7 @@
                           <td>
                             <p>12879452</p>
                           </td>
-                          <td>
-                            <div class="row-group row-group--sm row-group--nowrap row-group--align-center">
+                          <td><a class="row-group row-group--sm row-group--align-center row-group--nowrap" href="employee-settings.html">
                               <div class="row-group__item">
                                 <div class="avatar">
                                   <figure style="background-image:url('images/user/avatar.jpg')"></figure>
@@ -1150,8 +1137,7 @@
                               <div class="row-group__item">
                                 <p class="font-bold">Marija Juodijenė</p>
                               </div>
-                            </div>
-                          </td>
+                            </a></td>
                           <td>
                             <button class="button button--no-events button--border-surfie-green" type="button">Full time
                             </button>
@@ -1235,8 +1221,7 @@
                           <td>
                             <p>12879452</p>
                           </td>
-                          <td>
-                            <div class="row-group row-group--sm row-group--nowrap row-group--align-center">
+                          <td><a class="row-group row-group--sm row-group--align-center row-group--nowrap" href="employee-settings.html">
                               <div class="row-group__item">
                                 <div class="avatar">
                                   <figure style="background-image:url('images/user/avatar.jpg')"></figure>
@@ -1245,8 +1230,7 @@
                               <div class="row-group__item">
                                 <p class="font-bold">Marija Juodijenė</p>
                               </div>
-                            </div>
-                          </td>
+                            </a></td>
                           <td>
                           </td>
                           <td>
@@ -1416,8 +1400,7 @@
                           <td>
                             <p>12879452</p>
                           </td>
-                          <td>
-                            <div class="row-group row-group--sm row-group--nowrap row-group--align-center">
+                          <td><a class="row-group row-group--sm row-group--align-center row-group--nowrap" href="employee-settings.html">
                               <div class="row-group__item">
                                 <div class="avatar">
                                   <figure style="background-image:url('images/user/avatar.jpg')"></figure>
@@ -1426,8 +1409,7 @@
                               <div class="row-group__item">
                                 <p class="font-bold">Lukas Baranauskas</p>
                               </div>
-                            </div>
-                          </td>
+                            </a></td>
                           <td>
                             <button class="button button--no-events button--border-caribbean-green" type="button">Freelance
                             </button>
@@ -1515,8 +1497,7 @@
                           <td>
                             <p>12879452</p>
                           </td>
-                          <td>
-                            <div class="row-group row-group--sm row-group--nowrap row-group--align-center">
+                          <td><a class="row-group row-group--sm row-group--align-center row-group--nowrap" href="employee-settings.html">
                               <div class="row-group__item">
                                 <div class="avatar">
                                   <figure style="background-image:url('images/user/avatar.jpg')"></figure>
@@ -1525,8 +1506,7 @@
                               <div class="row-group__item">
                                 <p class="font-bold">Marija Juodijenė</p>
                               </div>
-                            </div>
-                          </td>
+                            </a></td>
                           <td>
                             <button class="button button--no-events button--border-surfie-green" type="button">Full time
                             </button>
@@ -1616,8 +1596,7 @@
                           <td>
                             <p>12879452</p>
                           </td>
-                          <td>
-                            <div class="row-group row-group--sm row-group--nowrap row-group--align-center">
+                          <td><a class="row-group row-group--sm row-group--align-center row-group--nowrap" href="employee-settings.html">
                               <div class="row-group__item">
                                 <div class="avatar">
                                   <figure style="background-image:url('images/user/avatar.jpg')"></figure>
@@ -1626,8 +1605,7 @@
                               <div class="row-group__item">
                                 <p class="font-bold">Marija Juodijenė</p>
                               </div>
-                            </div>
-                          </td>
+                            </a></td>
                           <td>
                             <button class="button button--no-events button--border-surfie-green" type="button">Full time
                             </button>
@@ -1711,8 +1689,7 @@
                           <td>
                             <p>12879452</p>
                           </td>
-                          <td>
-                            <div class="row-group row-group--sm row-group--nowrap row-group--align-center">
+                          <td><a class="row-group row-group--sm row-group--align-center row-group--nowrap" href="employee-settings.html">
                               <div class="row-group__item">
                                 <div class="avatar">
                                   <figure style="background-image:url('images/user/avatar.jpg')"></figure>
@@ -1721,8 +1698,7 @@
                               <div class="row-group__item">
                                 <p class="font-bold">Marija Juodijenė</p>
                               </div>
-                            </div>
-                          </td>
+                            </a></td>
                           <td>
                           </td>
                           <td>
