employee settings services tab was created

--- a/app/static/employers-page.html
+++ b/app/static/employers-page.html
@@ -491,7 +491,7 @@
                                   <div class="tooltip__text">
                                     <p>Creative editing</p>
                                   </div>
-                                  <p>EN-LT, LT, RU,</p>
+                                  <p>EN-LT, LT, RU</p>
                                 </div>
                               </div>
                               <div class="row-group__item">
@@ -590,7 +590,7 @@
                                   <div class="tooltip__text">
                                     <p>Creative editing</p>
                                   </div>
-                                  <p>EN-LT, LT, RU,</p>
+                                  <p>EN-LT, LT, RU</p>
                                 </div>
                               </div>
                               <div class="row-group__item">
@@ -683,7 +683,7 @@
                                   <div class="tooltip__text">
                                     <p>Creative editing</p>
                                   </div>
-                                  <p>EN-LT, LT, RU,</p>
+                                  <p>EN-LT, LT, RU</p>
                                 </div>
                               </div>
                               <div class="row-group__item">
@@ -774,7 +774,7 @@
                                   <div class="tooltip__text">
                                     <p>Creative editing</p>
                                   </div>
-                                  <p>EN-LT, LT, RU,</p>
+                                  <p>EN-LT, LT, RU</p>
                                 </div>
                               </div>
                               <div class="row-group__item">
@@ -959,7 +959,7 @@
                                   <div class="tooltip__text">
                                     <p>Creative editing</p>
                                   </div>
-                                  <p>EN-LT, LT, RU,</p>
+                                  <p>EN-LT, LT, RU</p>
                                 </div>
                               </div>
                               <div class="row-group__item">
@@ -1058,7 +1058,7 @@
                                   <div class="tooltip__text">
                                     <p>Creative editing</p>
                                   </div>
-                                  <p>EN-LT, LT, RU,</p>
+                                  <p>EN-LT, LT, RU</p>
                                 </div>
                               </div>
                               <div class="row-group__item">
@@ -1151,7 +1151,7 @@
                                   <div class="tooltip__text">
                                     <p>Creative editing</p>
                                   </div>
-                                  <p>EN-LT, LT, RU,</p>
+                                  <p>EN-LT, LT, RU</p>
                                 </div>
                               </div>
                               <div class="row-group__item">
@@ -1242,7 +1242,7 @@
                                   <div class="tooltip__text">
                                     <p>Creative editing</p>
                                   </div>
-                                  <p>EN-LT, LT, RU,</p>
+                                  <p>EN-LT, LT, RU</p>
                                 </div>
                               </div>
                               <div class="row-group__item">
@@ -1427,7 +1427,7 @@
                                   <div class="tooltip__text">
                                     <p>Creative editing</p>
                                   </div>
-                                  <p>EN-LT, LT, RU,</p>
+                                  <p>EN-LT, LT, RU</p>
                                 </div>
                               </div>
                               <div class="row-group__item">
@@ -1526,7 +1526,7 @@
                                   <div class="tooltip__text">
                                     <p>Creative editing</p>
                                   </div>
-                                  <p>EN-LT, LT, RU,</p>
+                                  <p>EN-LT, LT, RU</p>
                                 </div>
                               </div>
                               <div class="row-group__item">
@@ -1619,7 +1619,7 @@
                                   <div class="tooltip__text">
                                     <p>Creative editing</p>
                                   </div>
-                                  <p>EN-LT, LT, RU,</p>
+                                  <p>EN-LT, LT, RU</p>
                                 </div>
                               </div>
                               <div class="row-group__item">
@@ -1710,7 +1710,7 @@
                                   <div class="tooltip__text">
                                     <p>Creative editing</p>
                                   </div>
-                                  <p>EN-LT, LT, RU,</p>
+                                  <p>EN-LT, LT, RU</p>
                                 </div>
                               </div>
                               <div class="row-group__item">
@@ -1845,14 +1845,14 @@
                   <div class="catalog-navigation__count-total">/145</div>
                 </div>
                 <div class="catalog-navigation__button">
-                  <button class="button button--shadowed button--white button--size-50 button--radius-secondary" type="button">
+                  <button class="button button--shadow button--white button--size-50 button--radius-secondary" type="button">
                     <svg class="svg-icon svg-icon--surfie-green catalog-navigation__button-icon" width="12" height="12">
                       <use href="images/svg/svg-sprite/symbol/sprite.svg#chevron-left" x="0" y="0"></use>
                     </svg>
                   </button>
                 </div>
                 <div class="catalog-navigation__button">
-                  <button class="button button--shadowed button--white button--size-50 button--radius-secondary" type="button">
+                  <button class="button button--shadow button--white button--size-50 button--radius-secondary" type="button">
                     <svg class="svg-icon svg-icon--surfie-green catalog-navigation__button-icon" width="12" height="12">
                       <use href="images/svg/svg-sprite/symbol/sprite.svg#chevron-right" x="0" y="0"></use>
                     </svg>
